dep-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-show-host-details-deployment-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-show-host-details-deployment-v1
  template:
    metadata:
      labels:
        app: flask-show-host-details-deployment-v1
    spec:
      containers:
        - name: flask-show-host-details-deployment-v1
          image: us-central1-docker.pkg.dev/georgef-sandbox/flask-repo/flask-app:add-zone-tag
          ports:
            - containerPort: 8080
          imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: show-host-details-service-v2
spec:
  type: ClusterIP
  selector:
    app: flask-show-host-details-deployment-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
