lb-neg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: show-host-details-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{"name": "my-super-neg"}}}'
spec:
  type: LoadBalancer
  selector:
    app: show-host-details-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
