ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress-static-ip"
    # kubernetes.io/ingress.allow-http: "false"
spec:
  # tls:
  #   - secretName: hello-app-secret
  defaultBackend:
    service:
      name: show-host-details-service-v1
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: show-host-details-service-v1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: show-host-details-service-v2
                port:
                  number: 80
