ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "gke-ingress-ip"
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - gke.george-falkovich.com
  defaultBackend:
    service:
      name: show-host-details-service-v1
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: show-host-details-service-v1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: show-host-details-service-v2
                port:
                  number: 80
